# yt-whisper

./: .gitignore  CHANGELOG.md  README.md  TASKS.md  pyproject.toml  ruff.toml  setup.py
.windsurf/rules/: uv-managed.md
tests/: __init__.py  test_lib.py  test_public_interface.py  test_storage.py  test_yt_whisper.py
whisper/: __init__.py  audio.py
yt_whisper/: __init__.py  __main__.py  _migration.py  _version.py  cli.py  db.py  lib.py  storage.py
